# coursework_2

./: .flake8  config.py  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_file_worker_py.html  z_145eef247bfb46b6_interaction_py.html  z_145eef247bfb46b6_parser_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancy_worker_py.html
src/: file_worker.py  interaction.py  parser.py  utils.py  vacancy_worker.py
tests/: conftest.py  test_file_worker.py  test_interaction.py  test_parser.py  test_utils.py  test_vacancy_worker.py
